--- a/front-end/front/src/app/conta/edit/edit.component.html
+++ b/front-end/front/src/app/conta/edit/edit.component.html
@@ -1,37 +1,38 @@
 <div class="container">
-  <h1 class="text-center">Update Conta</h1>
+  <h1 class="text-center">Atualizar Conta</h1>
 
-  <a href="#" routerLink="/conta/index" class="btn btn-primary">Back</a>
+  <a routerLink="/conta/index" class="btn btn-primary">Voltar</a>
 
-  <form [formGroup]="form" (ngSubmit)="submit()">
+  <form [formGroup]="form" (ngSubmit)="submit()" class="form-centered">
 
-      <div class="form-group">
-          <label for="title">Title:</label>
-          <input
-              formControlName="title"
-              id="title"
-              type="text"
-              [(ngModel)]="conta.title"
-
-              class="form-control">
-          <div *ngIf="f['title'].touched && f['title'].invalid" class="alert alert-danger">
-              <div *ngIf="f['title'].errors && f['title'].errors['required']" >Title is required.</div>
-          </div>
+    <div class="form-group">
+      <label for="title">Título:</label>
+      <input
+        formControlName="title"
+        [(ngModel)]="conta.title"
+        id="title"
+        type="text"
+        class="form-control"
+        placeholder="Digite o título">
+      <div *ngIf="f['title'].touched && f['title'].invalid" class="alert alert-danger">
+        <div *ngIf="f['title'].errors?.['required']">O título é obrigatório.</div>
       </div>
+    </div>
 
-      <div class="form-group">
-          <label for="body">Body:</label>
-          <textarea
-              formControlName="body"
-              [(ngModel)]="conta.body"
-              id="body"
-              type="text"
-              class="form-control">
-          </textarea>
-          <div *ngIf="f['body'].touched && f['body'].invalid" class="alert alert-danger">
-              <div *ngIf="f['body'].errors && f['body'].errors['required']">Body is required.</div>
-          </div>
+    <div class="form-group">
+      <label for="body">Comentário:</label>
+      <textarea
+        formControlName="body"
+        [(ngModel)]="conta.body"
+        id="body"
+        class="form-control"
+        placeholder="Digite o comentário">
+      </textarea>
+      <div *ngIf="f['body'].touched && f['body'].invalid" class="alert alert-danger">
+        <div *ngIf="f['body'].errors?.['required']">O comentário é obrigatório.</div>
       </div>
-      <button class="btn btn-primary" type="submit" [disabled]="!form.valid" >Update</button>
+    </div>
+
+    <button class="btn btn-success" type="submit" [disabled]="!form.valid">Atualizar</button>
   </form>
 </div>
