--- a/front-end/front/src/app/conta/index/index.component.html
+++ b/front-end/front/src/app/conta/index/index.component.html
@@ -1,24 +1,24 @@
 <div class="container">
-  <h1 class="text-center">Angular CRUD App</h1>
+    <h1 class="text-center">CRUD FINANÇAS</h1>
 
-  <a href="#" routerLink="/conta/create/" class="btn btn-success">Create New Conta</a>
+    <a href="#" routerLink="/conta/create/" class="btn btn-success">Criar Nova operação</a>
 
-  <table class="table table-striped">
-    <tr>
-      <th>ID</th>
-      <th>Title</th>
-      <th>Body</th>
-      <th width="250px">Action</th>
-    </tr>
-    <tr *ngFor="let conta of contas">
-      <td>{{conta.id}}</td>
-      <td>{{conta.title}}</td>
-      <td>{{conta.body}}</td>
-      <td>
-        <a href="#" [routerLink]="['/conta/',conta.id,'view']"  class="btn btn-info">View</a>
-        <a href="#" [routerLink]="['/conta/',conta.id,'edit']" class="btn btn-primary text-dark">Edit</a>
-        <button type="button" (click)="deleteConta(conta.id)" class="btn btn-danger text-dark">Delete</button>
-      </td>
-    </tr>
-  </table>
-</div>
+    <table class="table table-striped">
+      <tr>
+        <th>ID</th>
+        <th>Title</th>
+        <th>Body</th>
+        <th width="250px">Action</th>
+      </tr>
+      <tr *ngFor="let conta of contas">
+        <td>{{conta.id}}</td>
+        <td>{{conta.title}}</td>
+        <td>{{conta.body}}</td>
+        <td>
+          <a href="#" [routerLink]="['/conta/',conta.id,'view']"  class="btn btn-info">View</a>
+          <a href="#" [routerLink]="['/conta/',conta.id,'edit']" class="btn btn-primary text-dark">Edit</a>
+          <button type="button" (click)="deleteConta(conta.id)" class="btn btn-danger text-dark">Delete</button>
+        </td>
+      </tr>
+    </table>
+  </div>
