--- a/front-end/front/src/app/conta/view/view.component.html
+++ b/front-end/front/src/app/conta/view/view.component.html
@@ -1,1 +1,21 @@
-<p>view works!</p>
+<div class="container">
+  <h1 class="text-center">View Post</h1>
+
+  <a href="#" routerLink="/conta/index" class="btn btn-primary">Back</a>
+
+  <div>
+      <strong>ID:</strong>
+      <p>{{conta.id}}</p>
+  </div>
+
+  <div>
+      <strong>Title:</strong>
+      <p>{{conta.title}}</p>
+  </div>
+
+  <div>
+      <strong>Body:</strong>
+      <p>{{conta.body}}</p>
+  </div>
+
+</div>
