--- a/front-end/front/src/app/dashboard-page/dashboard-page.component.html
+++ b/front-end/front/src/app/dashboard-page/dashboard-page.component.html
@@ -54,12 +54,12 @@
       [rows]="rows"
     />
   </div>
-  <div class="flex w-full justify-center items-center md:w-2/4">
+  <!-- <div class="flex w-full justify-center items-center md:w-2/4">
     <bar-chart
       class="w-full px-6"
       [chartTitle]="'Tabela de contas do final do mês'"
       [chartLabels]="chartLabels"
       [chartDataSets]="chartData"
     />
-  </div>
+  </div>-->
 </section>
