--- a/front-end/front/src/app/despesas-page/despesas-page.component.html
+++ b/front-end/front/src/app/despesas-page/despesas-page.component.html
@@ -91,13 +91,13 @@
         (selectable_array_parent)="updateTables($event)"
       />
     </div>
-    <div class="flex w-full justify-center items-center md:w-1/4">
+    <!-- <div class="flex w-full justify-center items-center md:w-1/4">
       <chart
         [chartTitle]="'Porcentagem dos gastos'"
         [chartSubtitle]="''"
         [chartData]="chartData"
       />
-    </div>
+    </div> -->
   </div>
   <modal
     [title]="'Registrar nova despesa ?'"
