--- a/front-end/front/src/app/receitas-page/receitas-page.component.html
+++ b/front-end/front/src/app/receitas-page/receitas-page.component.html
@@ -89,11 +89,11 @@
       />
     </div>
     <div class="flex w-full justify-center items-center md:w-1/4">
-      <chart
+      <!-- <chart
         [chartTitle]="'Porcentagem das receitas'"
         [chartSubtitle]="''"
         [chartData]="chartData"
-      />
+      /> -->
     </div>
   </div>
   <modal
